--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhA7IYTqxXqJ4q-oubE_OnJZadjIMNQlI84AZXf4vTYMjN52G8tD6uZMFOWtXPwX7VO0I&usqp=CAU" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>X</title>
   </head>
   <body>
     <div id="root"></div>
